完成阶段5
